# project-T3

./: .gitignore  Cargo.toml  export_presets.cfg  library.gdnlib  project.godot
.github/workflows/: rust.yml
.import/: o.png-718e4efd928d05c3014384645745b357.md5  o.png-718e4efd928d05c3014384645745b357.stex  title.png-f520a0d529e74edf0d3ba77895c4527c.md5  title.png-f520a0d529e74edf0d3ba77895c4527c.stex  ttt.png-c11b410ac7abe0597f3e443ab97dac90.md5  ttt.png-c11b410ac7abe0597f3e443ab97dac90.stex  x.png-c2761cde5044068192e9f310196875f2.md5  x.png-c2761cde5044068192e9f310196875f2.stex
assets/: ttt.png.import
gimp/: o.xcf  title.xcf  ttt.xcf  x.xcf
scene/: Ai.tscn  Board.tscn  Game.tscn  Level select.tscn  Link.tscn  Live.tscn  Result.tscn  Slot.tscn
scripts/: Level select.gd  Link.gd  Live.gd  computer.gd  global.gd  iA.gdns  quit.gd
src/: algorithm.rs  lib.rs
