[package]
name = "project-t3"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["me@gyara.moe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { version = "0.9.3", optional = true }

[features]
default = ["gd"]
gd = ["gdnative"]

[lib]
crate-type = ["cdylib"]
